# kangarootwelve_xkcp.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate_bindings.sh
.github/workflows/: build_k12sum.py  ci.yml  tag.yml
XKCP-K12/lib/Optimized64/: KeccakP-1600-timesN-AVX2.c
benches/: bench.rs
k12sum/: Cargo.toml
k12sum/src/: main.rs
k12sum/tests/: test.rs
src/: ffi_generic32.rs  ffi_generic64.rs  ffi_inplace32bi.rs  ffi_optimized64.rs  ffi_plain64.rs  lib.rs  regenerate_bindings.sh  test.rs
