[package]
name = "kangarootwelve-xkcp"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
constant_time_eq = "0.1.5"

[dev-dependencies]
hex = "0.4.2"
page_size = "0.4.2"
rand = "0.7.3"

[build-dependencies]
cc = "1.0.50"
