[package]
name = "kangarootwelve_xkcp"
version = "0.1.5"
edition = "2018"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "An FFI wrapper for the XKCP implementation of the KangarooTwelve hash function"
repository = "https://github.com/oconnor663/kangarootwelve_xkcp.rs"
license-file = "LICENSE"
documentation = "https://docs.rs/kangarootwelve_xkcp"
readme = "README.md"
keywords = ["kangarootwelve", "k12"]

[dependencies]
arrayvec = "0.7.6"
constant_time_eq = "0.4.2"

[dev-dependencies]
digest = { version = "0.10.7", features = ["mac"] }
hex = "0.4.2"
k12 = "0.3.0"
page_size = "0.6.0"
rand = "0.9.2"

[build-dependencies]
cc = "1.0.50"
