[package]
name = "k12sum"
version = "0.1.1"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "A command line implementation of the KangarooTwelve hash function"
repository = "https://github.com/oconnor663/kangarootwelve_xkcp.rs"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.27"
clap = { version = "2.33.0", default-features = false }
hex = "0.4.2"
kangarootwelve_xkcp = { version = "0.1", path = ".." }
memmap = "0.7.0"
wild = "2.0.3"

[dev-dependencies]
duct = "0.13.3"
tempfile = "3.1.0"
